--- a/index.html
+++ b/index.html
@@ -2,4 +2,19 @@
             google: {
                 families: ['Roboto']
             }
-        });</script><link rel=stylesheet href=https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css><link href=/css/app.5fa073eda5d69630713d73b4813acf46.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/js/manifest.320eb8f5ecb182cdcf28.js></script><script type=text/javascript src=/js/vendor.90d681d8148a887e46cb.js></script><script type=text/javascript src=/js/app.b32d8658af13c4d5b97e.js></script></body></html>
+        });</script><link rel=stylesheet href=https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-100427567-5', 'auto');
+        ga('send', 'pageview');</script><script>var oldOnLoad = window.onload;
+        window.onload = function() {
+            oldOnLoad && oldOnLoad();
+            var anchors = document.querySelectorAll('a');
+            for (var i = 0; i < anchors.length; ++i) {
+                var anchor = anchors[i];
+                anchor.onclick = function() {
+                    window.ga && window.ga('send', 'event', 'Link', 'Click link', this.href, { transport: 'beacon' });
+                }
+            }
+        }</script><link href=/css/app.5fa073eda5d69630713d73b4813acf46.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/js/manifest.320eb8f5ecb182cdcf28.js></script><script type=text/javascript src=/js/vendor.90d681d8148a887e46cb.js></script><script type=text/javascript src=/js/app.b32d8658af13c4d5b97e.js></script></body></html>
